# MK8Leaderboards

./: .gitignore  README.md  discord_bot.py  pyproject.toml  requirements.txt
Samples/: course_stats.py  exploitboards.py  ghost.py  mk8dxtest.py  mk8test.py  more_stats.py  player_timesheet.py
mariokart8/: boards.py  countries.py  extract_info.py  mk8.py  mk8_track_abbr.json  timesheet.py  track_stats.py
mariokart8/filters/: alts.json  banned.txt  blacklist.json  hacked.txt
mk8boards/: common.py  config.py  miis.py  str_mappings.py  track_abbr.json
mk8boards/mk8/: boards.py  boards_client.py  countries.json  extract_info.py  mk8.py  mk8_track_abbr.json  structures.py  timesheet.py  track_stats.py
mk8boards/mk8/filters/: alts.json  banned.txt  blacklist.json  hacked.txt
mk8boards/mk8dx/: structures.py
tests/: test_structures.py
