[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mk8boards"  # Too similar to MKLeaderboards and MKBoards; might change
version = "0.0.1a"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "anyio>=3.6.1",
    "anynet>=0.0.18",
    "nintendoclients>=0.0.5",
    "python-dotenv>=0.20.0",
]

[project.optional-dependencies]
dc = ["discord.py>=2.0.0"]
ex = ["matplotlib>=3.5.2","pandas>=1.4.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mk8boards*"]
